# social_app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/: urls.py
apps/common/models/: __init__.py  base.py  delete.py
apps/common/queryset/: __init__.py  delete_manager.py
apps/notifications/: urls.py
apps/notifications/migrations/: 0001_initial.py  0002_initial.py
apps/notifications/models/: notifications.py
apps/notifications/serializers/: __init__.py  notification.py
apps/notifications/views/: notifications.py
apps/posts/: urls.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_like.py  0004_alter_like_unique_together.py  0005_alter_post_content.py
apps/posts/models/: __init__.py  likes.py  posts.py
apps/posts/serializers/: __init__.py  posts.py
apps/posts/views/: posts.py
apps/users/: urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: users.py
apps/users/serializers/: __init__.py  profile.py
apps/users/views/: __init__.py  auth.py  profile.py
core/: settings.py  swagger.py  urls.py
